# intelligent-doc-engine

./: .env.example  .gitignore  CLAUDE.md  GUARDRAILS.yaml  _make_template.py  azure-pipelines.yml  config.json  create_dirs.bat  pyproject.toml  requirements.txt  run_setup.cmd  setup_dirs.py  test_lineage.py
.claude/: settings.json
.claude/agents/: analyzer-agent.md  builder-agent.md  devils-advocate-agent.md  lead-orchestrator.md  peer-reviewer-agent.md  reviewer-agent.md  scanner-agent.md
.github/workflows/: analytics-doc.yml  ci.yml
examples/: consumer-workflow.yml
guardrails/: __init__.py  content_guard.py  folder_guard.py  input_guard.py  logger.py  phase_guard.py  run_guardrails.py
output/intelligent_doc_engine/: sections_cache.json
plans/: intelligent_doc_engine_doc_plan.yaml
research/: intelligent_doc_engine_scan_report.yaml
scripts/: install_git_hook.py  publish_to_wiki.py
src/: __init__.py  adf_lineage_builder.py  analytics_doc_generator.py  analytics_docx_writer.py  analytics_html_writer.py  analytics_runner.py  analytics_template_generator.py  claude_engine.py  git_tracker.py  lineage.py  mermaid_renderer.py  pr_scanner.py  runner.py  sha_scanner.py  template_writer.py  versioner.py
src/agents/: __init__.py  analyzer_agent.py  builder_agent.py  reviewer_agent.py  scanner_agent.py
src/parsers/: adf_parser.py  (+3 more)
templates/: AUD_template.docx
tests/: __init__.py  test_claude_engine.py  test_git_tracker.py  test_sha_scanner.py  test_template_writer.py  test_versioner.py
testscripts/: intelligent_doc_engine_validation_report.yaml
(+1 files in other folders)
