[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "intelligent-doc-engine"
version = "1.0.0"
description = "AI-powered documentation engine for data engineering PRs (Snowflake · ADF · Azure Functions)"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
keywords = ["documentation", "data-engineering", "snowflake", "azure-data-factory", "lineage"]
dependencies = [
    "anthropic>=0.40.0",
    "python-docx>=1.1.2",
    "PyYAML>=6.0.2",
    "requests>=2.32.0",
    "click>=8.1.0",
    "rich>=13.0.0",
    "sqlglot>=23.0.0",
    "python-dotenv>=1.0.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "build>=1.0.0",
]

[project.scripts]
analytics-doc = "src.analytics_runner:cli"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.setuptools.package-data]
"src" = ["templates/**/*"]
